# tricore-emu

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .woodpecker.yaml  CMakeLists.txt  CMakePresets.json  COPYING  Cargo.toml  README.md  setupVcpkg.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: flags.cmake
lib/: CMakeLists.txt
lib/ArgParse/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  ParsedOptions.cpp  ParsedOptions.hpp
lib/Utils/: CMakeLists.txt
lib/emulator/: Bus.cpp  Bus.hpp  BusClient.cpp  BusClient.hpp  CMakeLists.txt  Cpu.cpp  Cpu.hpp  Elf.cpp  Elf.hpp  Error.hpp  InstructionFormat.hpp  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  Registers.hpp  Tricore.hpp  Types.hpp  Utils.hpp
lib/emulator/Cpu/: Cpu.cpp  Cpu.hpp  InstructionFormat.cpp  InstructionFormat.hpp  Registers.hpp
lib/emulator/Peripherals/: Asclin.cpp  Asclin.hpp  Can.cpp  Cbs.hpp  Ccu6.hpp  Converter.cpp  Converter.hpp  Dma.cpp  Dma.hpp  Dmu.cpp  Dmu.hpp  Dom.cpp  Dom.hpp  Eray.hpp  Fsi.cpp  Fsi.hpp  Gpt12.cpp  Gpt12.hpp  Gtm.cpp  Gtm.hpp  Int.cpp  Int.hpp  Iom.cpp  Iom.hpp  Mtu.cpp  Mtu.hpp  Pfi.cpp  Pfi.hpp  Pms.cpp  Pms.hpp  Pmu.cpp  Pmu.hpp  Port.cpp  Port.hpp  Qspi.cpp  Qspi.hpp  Sbcu.cpp  Sbcu.hpp  Scu.cpp  Scu.hpp  (+4 more)
old-code/: .clang-format  .gitignore  CMakePresets.json  COPYING
old-code/.devcontainer/: devcontainer.json
old-code/.github/workflows/: ci.yml
old-code/cmake/: docs.cmake
old-code/docs/: Doxyfile.in
old-code/source/: Elf.hpp
old-code/source/Peripherals/: Cbs.hpp  Dmu.hpp  Dom.cpp  Eray.cpp  Eray.hpp  Fce.cpp  Fce.hpp  Fsi.hpp  Iom.cpp  Iom.hpp  Pmu.hpp  Sbcu.cpp
old-code/test/source/: utils_test.cpp
script/: regdump.py
source/: BusClient.hpp  CMakeLists.txt  Cpu.cpp  Cpu.hpp  Elf.cpp  Elf.hpp  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  Tc33x.cpp  Tc33x.hpp  Types.hpp  Utils.hpp  main.cpp
source/Peripherals/: Asclin.cpp  Asclin.hpp  Can.hpp  Cbs.cpp  Ccu6.cpp  Ccu6.hpp  Converter.cpp  Converter.hpp  Cpu.cpp  Cpu.hpp  Dma.hpp  Dom.hpp  Evadc.cpp  Evadc.hpp  Fsi.cpp  Gpt12.cpp  Gpt12.hpp  Gtm.hpp  Int.hpp  Mtu.cpp  Mtu.hpp  Pfi.cpp  Pfi.hpp  Pms.cpp  Pms.hpp  Port.cpp  Qspi.hpp  Sbcu.hpp  Scu.cpp  Scu.hpp  Sent.cpp  Sent.hpp  Smu.cpp  Smu.hpp  Src.cpp  Src.hpp  Stm.cpp  Stm.hpp
src/: CMakeLists.txt  bit_utils.rs  bus.rs  config.rs  cpu.rs  elf.rs  machine.rs  main.cpp  main.rs  memory.rs  peripherals.rs  utils.rs
src/cpu/: memory.rs  mod.rs  opcodes.rs  utils.rs
src/emulator/: BitOps.hpp  Bus.cpp  Bus.hpp  BusOps.cpp  BusOps.hpp  CMakeLists.txt  Elf.cpp  Elf.hpp  Error.hpp  IBusClient.cpp  IBusClient.hpp  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  Span.hpp  Utils.hpp
src/emulator/Cpu/: Cpu.cpp  Cpu.hpp  InstructionFormat.cpp  InstructionFormat.hpp
src/emulator/Peripherals/: Asclin.cpp  Asclin.hpp  Can.cpp  Can.hpp  Cbs.cpp  Cbs.hpp  Ccu6.cpp  Ccu6.hpp  Converter.cpp  Converter.hpp  Cpu.cpp  Cpu.hpp  Dma.cpp  Dma.hpp  Dmu.cpp  Dmu.hpp  Dom.cpp  Dom.hpp  Eray.cpp  Eray.hpp  Evadc.cpp  Evadc.hpp  Fce.cpp  Fce.hpp  Fsi.cpp  Fsi.hpp  Gpt12.cpp  Gpt12.hpp  Gtm.cpp  Gtm.hpp  Int.cpp  Int.hpp  Iom.cpp  Iom.hpp  Mtu.cpp  Mtu.hpp  Pfi.cpp  Pfi.hpp  Pms.cpp  Pms.hpp  (+18 more)
src/peripherals/: mod.rs  scu.rs  xram.rs
test/: CMakeLists.txt
test/ArgParse/: CMakeLists.txt  argparse_test.cpp  parsed_options_test.cpp
test/Emulator/: CMakeLists.txt  bus_test.cpp  memory_test.cpp
test/Utils/: CMakeLists.txt  bit_ops_test.cpp
test/source/: bus_test.cpp  elf_test.cpp  instruction_test.cpp  memory_test.cpp  utils_test.cpp
